# DS_wet1

./: Animal.cpp  Animal.h  CMakeLists.txt  GuyOmerTests.cpp  README.md  RPtst.h  Zoologist.cpp  Zoologist.h  animals.h  avlTree.h  library1.cpp  library1.h  magicManager.h  main1.cpp  tests.cpp  tests.h  wet1-dry.docx  ~$t1-dry.docx
4sub1/: Zoologist.h  library1.cpp  sub1conf.txt  submissions.txt
4sub2/: Zoologist.cpp
